[gd_scene load_steps=4 format=3 uid="uid://c5bst5vw356y1"]

[ext_resource type="Script" path="res://UI/LootUI/LootUI.gd" id="1_g7r4y"]
[ext_resource type="PackedScene" uid="uid://pav6643g05xq" path="res://PowerUps/PowerUpCard.tscn" id="1_qq0s2"]
[ext_resource type="PackedScene" uid="uid://bhpe82eqte5tv" path="res://UI/Buttons/YellowButton/BasicButton.tscn" id="3_xqrf7"]

[node name="LootUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_g7r4y")

[node name="LootCard" parent="." instance=ExtResource("1_qq0s2")]
layout_mode = 1
offset_left = -47.0
offset_top = -164.0
offset_right = 48.0
offset_bottom = -34.0

[node name="Header" parent="LootCard/Background" index="0"]
text = "New Spell found!"

[node name="MainText" parent="LootCard/Background" index="1"]
offset_left = -33.5
offset_top = 16.0
offset_right = 34.5
offset_bottom = 54.0
horizontal_alignment = 1
autowrap_mode = 3

[node name="KeepCurrentBtn" parent="." instance=ExtResource("3_xqrf7")]
layout_mode = 0
offset_left = -44.0
offset_top = -13.0
offset_right = 47.0
offset_bottom = 41.0

[node name="BtnLabel" parent="KeepCurrentBtn" index="0"]
offset_left = -37.0
offset_top = -26.0
offset_right = 37.0
offset_bottom = 22.0
text = "Keep current
spell"

[connection signal="pressed" from="LootCard" to="." method="_on_loot_card_pressed"]
[connection signal="pressed" from="KeepCurrentBtn" to="." method="_on_keep_current_btn_pressed"]

[editable path="LootCard"]
[editable path="KeepCurrentBtn"]
